kubernetes/apps/network/external-dns/cloudflare/networkpolicy.yaml
---
# yaml-language-server: $schema=https://deedee-ops.github.io/schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: external-dns
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: external-dns
    egress:
      - toEntities:
          - kube-apiserver
      - toCIDRSet:
          # https://www.cloudflare.com/ips/
          - cidr: 103.21.244.0/22
          - cidr: 103.22.200.0/22
          - cidr: 103.31.4.0/22
          - cidr: 104.16.0.0/13
          - cidr: 104.24.0.0/14
          - cidr: 108.162.192.0/18
          - cidr: 131.0.72.0/22
          - cidr: 141.101.64.0/18
          - cidr: 162.158.0.0/15
          - cidr: 172.64.0.0/13
          - cidr: 173.245.48.0/20
          - cidr: 188.114.96.0/20
          - cidr: 190.93.240.0/20
          - cidr: 197.234.240.0/22
          - cidr: 198.41.128.0/17
